--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     </plurals>
     <string name="label_version_prefix">Version %1$s</string>
     <string name="label_enlarger_height_units">Enlarger height units</string>
+    <string name="action_add_test_exposures">Add Test Exposures</string>
 </resources>
