Add note to test exposures button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="action_add_test_exposures">Add Test Exposures</string>
     <string name="label_enlarger_profile_calibrated">Calibrated</string>
     <string name="label_enlarger_profile_uncalibrated">Uncalibrated</string>
+    <string name="note_add_test_exposures">Test exposures are used to calibrate this profile to the unique characteristics of your enlarger, which will make results more accurate.</string>
 </resources>
