--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">PrintSizer</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">PrintSizer</string>
     <string name="nav_header_subtitle">Darkroom Printing Calculator</string>
     <string name="nav_header_desc">Navigation header</string>
@@ -39,7 +37,7 @@
     <string name="action_about">About</string>
     <string name="label_smaller_print">Smaller Print</string>
     <string name="label_larger_print">Larger Print</string>
-    <string name="action_choose_enlarger_profile">Choose Enlarger Profile...</string>
+    <string name="action_choose_enlarger_profile">Choose Enlarger Profile…</string>
     <string name="dialog_choose_enlarger_profile">Choose enlarger profile</string>
     <string name="action_add_enlarger_profile">Add Enlarger Profile</string>
     <plurals name="title_list_selection">
