Add ability to adjust output exposure
This gives an easy way to apply an exposure compensation to the larger
print. A common use would be changing the enlarger lens aperture to
avoid a dramatic change to the exposure time.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="placeholder_no_enlarger_profiles">No Enlarger Profiles</string>
     <string name="description_fork_me_on_github">Fork me on Github</string>
     <string name="description_save_enlarger_profile">Save enlarger profile</string>
+    <string name="label_exposure_increments">Exposure increments</string>
 </resources>
