--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="description_fork_me_on_github">Fork me on Github</string>
     <string name="description_save_enlarger_profile">Save enlarger profile</string>
     <string name="label_exposure_increments">Exposure increments</string>
+    <string name="description_exposure_compensation">Exposure compensation</string>
 </resources>
