--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="nav_header_title">PrintSizer</string>
     <string name="nav_header_subtitle">Darkroom Printing Calculator</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="empty" />
     <string name="action_settings">Settings</string>
     <string name="menu_home">PrintSizer</string>
     <string name="menu_enlargers">Enlarger Profiles</string>
@@ -14,6 +15,8 @@
     <string name="action_copy">Copy</string>
     <string name="action_delete">Delete</string>
     <string name="action_cancel">Cancel</string>
+    <string name="action_accept">Accept</string>
+    <string name="action_remove">Remove</string>
     <string name="label_name">Name</string>
     <string name="label_description">Description</string>
     <string name="label_lens_focal_length">Lens focal length</string>
@@ -42,6 +45,9 @@
     <string name="label_larger_print">Larger Print</string>
     <string name="action_choose_enlarger_profile">Choose Enlarger Profile…</string>
     <string name="dialog_choose_enlarger_profile">Choose enlarger profile</string>
+    <string name="dialog_choose_paper_profile">Choose paper profile</string>
+    <string name="dialog_smaller_print_paper_profile">Smaller print paper profile</string>
+    <string name="dialog_larger_print_paper_profile">Larger print paper profile</string>
     <string name="action_add_enlarger_profile">Add Enlarger Profile</string>
     <string name="action_add_paper_profile">Add paper profile</string>
     <string name="action_add_stock_profile">Add stock profile</string>
@@ -73,7 +79,7 @@
     <string name="label_grade_3">Grade 3</string>
     <string name="label_grade_4">Grade 4</string>
     <string name="label_grade_5">Grade 5</string>
-    <string name="label_grade_none">None</string>
+    <string name="label_grade_unfiltered">Unfiltered</string>
     <string name="heading_filter_grade">Filter Grade</string>
     <string name="heading_iso_p">ISO (P)</string>
     <string name="heading_iso_r">ISO (R)</string>
